--- a/angular.json
+++ b/angular.json
@@ -16,6 +16,7 @@
             "outputPath": "dist/anniversary-app",
             "index": "src/index.html",
             "browser": "src/main.ts",
+            "baseHref": "/anniversary-app/",
             "polyfills": [
               "zone.js"
             ],
